--- a/app/src/main/res/layout/fragment_home_holder.xml
+++ b/app/src/main/res/layout/fragment_home_holder.xml
@@ -4,10 +4,10 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
+    <ListView
+        android:id="@id/listview"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textColor="@color/blue"
-        android:text="home holder fragment"/>
+        android:layout_height="match_parent">
+    </ListView>
 
 </LinearLayout>
