--- a/app/src/main/res/layout/item_home_holder_list.xml
+++ b/app/src/main/res/layout/item_home_holder_list.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="horizontal">
 
     <TextView
         android:id="@+id/index"
         android:layout_width="40dp"
+        android:layout_height="50dp"
         android:gravity="center"
-        android:layout_height="60dp"/>
+        android:textColor="@color/widget_black"/>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:gravity="center_vertical"
-        android:layout_height="60dp"/>
+        android:textColor="@color/widget_black"/>
 
 </LinearLayout>
