--- a/app/src/main/res/layout/item_home_holder_list.xml
+++ b/app/src/main/res/layout/item_home_holder_list.xml
@@ -2,20 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="horizontal">
+              android:background="@color/white"
+              android:orientation="vertical"
+              android:padding="10dp">
 
-    <TextView
-        android:id="@+id/index"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:textColor="@color/widget_black"/>
-
-    <TextView
-        android:id="@+id/title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/widget_black"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/index"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:textColor="@color/widget_black"/>
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:textColor="@color/widget_black"/>
+    </LinearLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"/>
 
 </LinearLayout>
