--- a/app/src/main/res/layout/item_home_holder_list.xml
+++ b/app/src/main/res/layout/item_home_holder_list.xml
@@ -12,14 +12,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/index"
+            android:id="@id/index"
             android:layout_width="40dp"
             android:layout_height="50dp"
             android:gravity="center"
             android:textColor="@color/widget_black"/>
 
         <TextView
-            android:id="@+id/title"
+            android:id="@id/title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:gravity="center_vertical"
