--- a/app/src/main/res/layout/item_home_holder_list.xml
+++ b/app/src/main/res/layout/item_home_holder_list.xml
@@ -13,17 +13,19 @@
 
         <TextView
             android:id="@id/index"
-            android:layout_width="40dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:gravity="center"
-            android:textColor="@color/widget_black"/>
+            android:text="1"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@id/title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:paddingLeft="10dp"
             android:gravity="center_vertical"
-            android:textColor="@color/widget_black"/>
+            android:textColor="@color/black"/>
     </LinearLayout>
 
 
