--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="red">#da372a</color>
     <color name="gray">#a19992</color>
     <color name="blue">#47c4fe</color>
-    <color name="widget_black">#000000</color>
+    <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="transparent">#00000000</color>
     <color name="green">#6fca3b</color>
