--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,5 +6,8 @@
     <item name="image" type="id">image</item>
     <item name="index" type="id">index</item>
     <item name="title" type="id">title</item>
+    <item name="play_button" type="id">play_button</item>
+    <item name="song_name" type="id">song_name</item>
+    <item name="singer_name" type="id">singer_name</item>
 
 </resources>
