--- a/app/src/main/res/layout/fragment_loading_animation.xml
+++ b/app/src/main/res/layout/fragment_loading_animation.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@color/white"
+             android:orientation="vertical">
 
 
 
     <com.lpan.study.view.SimleLoadingView
         android:id="@id/smile"
+        android:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:gravity="center"
+        android:visibility="visible"
+        android:text="loading animation"
+        android:textColor="@color/black"/>
+
+</FrameLayout>
