--- a/app/src/main/res/layout/fragment_loading_animation.xml
+++ b/app/src/main/res/layout/fragment_loading_animation.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="@color/white"
-             android:orientation="vertical">
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/white"
+              android:orientation="vertical">
 
 
     <com.lpan.study.view.SimleLoadingView
         android:id="@id/smile"
-        android:visibility="visible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_gravity="center"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:visibility="visible"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:gravity="center"
-        android:visibility="visible"
-        android:text="loading animation"
-        android:textColor="@color/black"/>
 
-</FrameLayout>
+</LinearLayout>
