--- a/app/src/main/res/layout/smile_layout.xml
+++ b/app/src/main/res/layout/smile_layout.xml
@@ -8,27 +8,27 @@
 
     <com.lpan.study.view.SimleFaceView
         android:id="@+id/smileView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_width="100dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="100dp"/>
 
     <com.lpan.study.view.SimleEyesView
         android:id="@+id/smileView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
 
     <com.lpan.study.view.SimleLeftEyeView
         android:id="@+id/smileView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
 
     <com.lpan.study.view.SimleRightEyeView
         android:id="@+id/smileView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
 
 
 </FrameLayout>
