--- a/app/src/main/res/layout/fragment_group_image.xml
+++ b/app/src/main/res/layout/fragment_group_image.xml
@@ -5,8 +5,36 @@
               android:background="@color/white"
               android:orientation="vertical">
 
-    <com.lpan.study.view.GroupImageView
-        android:id="@id/group_image"
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.lpan.study.view.CircularImageView
+            android:id="@+id/circularImageView1"
+            android:layout_width="120dp"
+            android:layout_height="120dp"/>
+
+        <com.lpan.study.view.CircularImageView
+            android:id="@+id/circularImageView2"
+            android:layout_width="120dp"
+            android:layout_height="120dp"/>
+
+        <com.lpan.study.view.CircularImageView
+            android:id="@+id/circularImageView3"
+            android:layout_width="120dp"
+            android:layout_height="120dp"/>
+
+        <com.lpan.study.view.CircularImageView
+            android:id="@+id/circularImageView4"
+            android:layout_width="120dp"
+            android:layout_height="120dp"/>
+
+        <com.lpan.study.view.CircularImageView
+            android:id="@+id/circularImageView5"
+            android:layout_width="120dp"
+            android:layout_height="120dp"/>
+    </LinearLayout>
+
 </LinearLayout>
