--- a/app/src/main/res/layout/fragment_group_image.xml
+++ b/app/src/main/res/layout/fragment_group_image.xml
@@ -1,40 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/white"
-              android:orientation="vertical">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.lpan.study.view.CircularImageView
+                android:id="@+id/circularImageView1"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:background="@color/bg_f2"/>
+
+            <com.lpan.study.view.CircularImageView
+                android:id="@+id/circularImageView2"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:background="@color/bg_f2"/>
+
+            <com.lpan.study.view.CircularImageView
+                android:id="@+id/circularImageView3"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:background="@color/bg_f2"/>
+
+            <com.lpan.study.view.CircularImageView
+                android:id="@+id/circularImageView4"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:background="@color/bg_f2"/>
+
+            <com.lpan.study.view.CircularImageView
+                android:id="@+id/circularImageView5"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:background="@color/bg_f2"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="50dp"
+                android:layout_height="0dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+
+                android:text="1"/>
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="50dp"
+                android:layout_height="0dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:text="2"/>
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="50dp"
+                android:layout_height="0dp"
+                android:layout_margin="5dp"
+
+                android:layout_weight="1"
+                android:text="3"/>
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="50dp"
+                android:layout_height="0dp"
+
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+
+                android:text="4"/>
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="50dp"
+                android:layout_height="0dp"
+                android:layout_margin="5dp"
+
+                android:layout_weight="1"
+                android:text="5"/>
+        </LinearLayout>
+
+    </FrameLayout>
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <com.lpan.study.view.CircularImageView
-            android:id="@+id/circularImageView1"
-            android:layout_width="120dp"
-            android:layout_height="120dp"/>
-
-        <com.lpan.study.view.CircularImageView
-            android:id="@+id/circularImageView2"
-            android:layout_width="120dp"
-            android:layout_height="120dp"/>
-
-        <com.lpan.study.view.CircularImageView
-            android:id="@+id/circularImageView3"
-            android:layout_width="120dp"
-            android:layout_height="120dp"/>
-
-        <com.lpan.study.view.CircularImageView
-            android:id="@+id/circularImageView4"
-            android:layout_width="120dp"
-            android:layout_height="120dp"/>
-
-        <com.lpan.study.view.CircularImageView
-            android:id="@+id/circularImageView5"
-            android:layout_width="120dp"
-            android:layout_height="120dp"/>
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
