--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,5 +34,6 @@
     <color name="colorPlayerProgress">#FFFFFF</color>
     <color name="bg_f2">#f2f2f2</color>
     <color name="smile_loading_color">#E8EAEB</color>
+    <color name="ebebeb">#EBEBEB</color>
 
 </resources>
