--- a/app/src/main/res/layout/fragment_group_image.xml
+++ b/app/src/main/res/layout/fragment_group_image.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             android:orientation="horizontal">
 
     <FrameLayout
@@ -13,35 +14,76 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.lpan.study.view.CircularImageView
-                android:id="@+id/circularImageView1"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:background="@color/bg_f2"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/group_avatar_bg"
+                android:gravity="center"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+                <com.lpan.study.view.CircularImageView
+                    android:id="@+id/circularImageView1"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:background="@color/transparent"/>
+            </LinearLayout>
 
-            <com.lpan.study.view.CircularImageView
-                android:id="@+id/circularImageView2"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:background="@color/bg_f2"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/group_avatar_bg"
+                android:gravity="center"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+                <com.lpan.study.view.CircularImageView
+                    android:id="@+id/circularImageView2"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:background="@color/transparent"/>
+            </LinearLayout>
 
-            <com.lpan.study.view.CircularImageView
-                android:id="@+id/circularImageView3"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:background="@color/bg_f2"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/group_avatar_bg"
+                android:gravity="center"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+                <com.lpan.study.view.CircularImageView
+                    android:id="@+id/circularImageView3"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:background="@color/transparent"/>
+            </LinearLayout>
 
-            <com.lpan.study.view.CircularImageView
-                android:id="@+id/circularImageView4"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:background="@color/bg_f2"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/group_avatar_bg"
+                android:gravity="center"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+                <com.lpan.study.view.CircularImageView
+                    android:id="@+id/circularImageView4"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:background="@color/transparent"/>
+            </LinearLayout>
 
-            <com.lpan.study.view.CircularImageView
-                android:id="@+id/circularImageView5"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:background="@color/bg_f2"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/group_avatar_bg"
+                android:gravity="center"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+                <com.lpan.study.view.CircularImageView
+                    android:id="@+id/circularImageView5"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:background="@color/transparent"/>
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
