--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -15,5 +15,6 @@
     <item name="text" type="id">text</item>
     <item name="circle_image" type="id">circle_image</item>
     <item name="group_image" type="id">group_image</item>
+    <item name="image1" type="id">image1</item>
 
 </resources>
