--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -19,6 +19,7 @@
     <item name="text1" type="id">text1</item>
     <item name="text2" type="id">text2</item>
     <item name="text3" type="id">text3</item>
+    <item name="edit1" type="id">edit1</item>
 
 
 </resources>
