--- a/app/src/main/res/layout/fragment_io_test.xml
+++ b/app/src/main/res/layout/fragment_io_test.xml
@@ -31,4 +31,12 @@
         android:gravity="center_vertical"
         android:textColor="@color/black"/>
 
+    <EditText
+        android:id="@id/edit1"
+        android:layout_width="match_parent"
+        android:hint="edit"
+        android:textColorHint="@color/black"
+        android:layout_height="50dp"/>
+
+
 </LinearLayout>
