--- a/app/src/main/res/layout/fragment_loading_animation.xml
+++ b/app/src/main/res/layout/fragment_loading_animation.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/white"
+              android:background="@color/blue"
               android:orientation="vertical">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+
+    </FrameLayout>
 
 
     <com.lpan.study.view.SimleLoadingView
         android:id="@id/smile"
-        android:layout_gravity="center"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:visibility="visible"/>
 
 
-</LinearLayout>
+</FrameLayout>
