--- a/app/src/main/res/layout/fragment_video_play.xml
+++ b/app/src/main/res/layout/fragment_video_play.xml
@@ -42,7 +42,7 @@
     </FrameLayout>
 
 
-    <SeekBar
+    <com.lpan.study.view.UnclickSeekBar
         android:id="@id/seekbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
