--- a/app/src/main/res/layout/fragment_draw_image.xml
+++ b/app/src/main/res/layout/fragment_draw_image.xml
@@ -1,38 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:background="@color/white"
-             android:id="@id/layout"
-              android:layout_height="match_parent">
+<FrameLayout android:id="@id/layout"
+             xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@color/white"
+             android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="top"
+        android:gravity="center"
         android:text="下载芥末校园"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:gravity="center"
-        android:layout_gravity="top"
-        android:layout_height="50dp"/>
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@id/image1"
-        android:layout_width="100dp"
-        android:layout_gravity="center"
-        android:layout_height="100dp"
-        android:src="@mipmap/jiemo_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scaleType="centerCrop"
+        android:src="@mipmap/jiemo_icon"
         />
 
     <TextView
-        android:layout_width="match_parent"
-        android:text="保存图片"
         android:id="@id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
         android:background="@drawable/button_jiemo_bg"
+        android:gravity="center"
+        android:text="保存图片"
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:gravity="center"
-        android:layout_gravity="bottom"
-        android:layout_height="50dp"/>
+        android:visibility="gone"/>
+
+    <LinearLayout
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <include layout="@layout/dotted_line"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="3dp"
+                android:layout_height="3dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_gray_5dp"/>
+
+            <View
+                android:layout_width="5dp"
+                android:layout_height="5dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_gray_5dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="超级喜欢"
+                android:textColor="@color/black"
+                />
+
+            <View
+                android:layout_width="5dp"
+                android:layout_height="5dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_gray_5dp"/>
+
+            <View
+                android:layout_width="3dp"
+                android:layout_height="3dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_gray_5dp"/>
+
+        </LinearLayout>
+
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <include layout="@layout/dotted_line"/>
+
+        </FrameLayout>
+    </LinearLayout>
+
+    <include layout="@layout/super_like_dotted_line"/>
+
 
 </FrameLayout>
