--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -36,7 +36,8 @@
     <item name="ok" type="id">ok</item>
     <item name="layout" type="id">layout</item>
     <item name="button1" type="id">button1</item>
-
+    <item name="dslvList" type="id">dslvList</item>
+    <item name="drag" type="id">drag</item>
 
 
 </resources>
