--- a/app/src/main/res/layout/fragment_clickable_span.xml
+++ b/app/src/main/res/layout/fragment_clickable_span.xml
@@ -3,12 +3,22 @@
               android:orientation="vertical"
               android:background="@color/white"
               android:layout_width="match_parent"
+              android:padding="10dp"
               android:layout_height="match_parent">
 
     <TextView
         android:id="@id/text"
         android:layout_width="match_parent"
-        android:text="sss"
         android:textColor="@color/black"
-        android:layout_height="wrap_content"/>
+        android:gravity="center_vertical"
+        android:layout_height="50dp"/>
+
+    <TextView
+        android:id="@id/text1"
+        android:layout_width="match_parent"
+        android:textColor="@color/black"
+        android:gravity="center_vertical"
+        android:layout_height="50dp"/>
+
+
 </LinearLayout>
