--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -42,6 +42,8 @@
     <item name="back_text" type="id">back_text</item>
     <item name="back_button" type="id">back_button</item>
     <item name="listview_tabs" type="id">listview_tabs</item>
+    <item name="order" type="id">order</item>
+    <item name="hflip" type="id">hflip</item>
 
 
 </resources>
