--- a/app/src/main/res/layout/fragment_video_play.xml
+++ b/app/src/main/res/layout/fragment_video_play.xml
@@ -98,18 +98,21 @@
             android:background="@drawable/button_jiemo_bg"
             android:textColor="@color/black"
             android:layout_height="40dp"/>
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
+        android:background="@drawable/button_jiemo_bg"
         android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="60dp"
-            android:id="@id/text21"
+            android:id="@id/hflip"
             android:gravity="center"
             android:padding="5dp"
+            android:text="hflip"
             android:textColor="@color/black"
             android:layout_height="40dp"/>
 
