--- a/app/src/main/res/layout/fragment_draw_image.xml
+++ b/app/src/main/res/layout/fragment_draw_image.xml
@@ -1,41 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:id="@id/layout"
-             xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@id/layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <TextView
-                android:id="@id/text1"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="center_vertical"
-                android:text="1 圆角图片"
-                android:textColor="@color/black"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/black"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="center_vertical"
-                android:text="2 圆角图片"
-                android:textColor="@color/black"/>
-        </LinearLayout>
-    </ScrollView>
-
-    <include layout="@layout/actionbar_white"/>
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gif_image"
+        android:layout_width="wrap_content"
+        android:src="@mipmap/gif3"
+        android:layout_height="wrap_content"/>
 </FrameLayout>
