--- a/app/src/main/res/layout/item_video_list_player.xml
+++ b/app/src/main/res/layout/item_video_list_player.xml
@@ -1,35 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="10dp"
-              android:orientation="vertical">
+              android:background="@color/blue"
+              android:orientation="vertical"
+              android:padding="20dp">
 
     <TextView
         android:id="@id/order"
         android:layout_width="match_parent"
-        android:text="1"
+        android:layout_height="50dp"
         android:gravity="center"
-        android:layout_height="50dp"/>
+        android:text="1"/>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <com.github.captain_miao.optroundcardview.OptRoundCardView
+        android:id="@+id/top_card_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:optRoundCardBottomEdges="false"
+        app:optRoundCardCornerRadius="15dp"
+        app:optRoundCardLeftBottomCorner="true"
+        app:optRoundCardLeftTopCorner="false"
+        app:optRoundCardRightBottomCorner="true"
+        app:optRoundCardRightTopCorner="true">
 
         <com.lpan.study.view.TextureVideoView
             android:id="@id/textureview"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"/>
-
-        <FrameLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="200dp"
-            android:background="@color/transparent"
-            >
+            android:layout_margin="5dp"/>
 
-        </FrameLayout>
 
-    </FrameLayout>
+    </com.github.captain_miao.optroundcardview.OptRoundCardView>
 
 
 </LinearLayout>
